--- a/wiki/cs/Start_up_and_Configuration.html
+++ b/wiki/cs/Start_up_and_Configuration.html
@@ -1,11 +1,11 @@
 <link href="../site.css" rel="stylesheet" type="text/css"/><div class="mw-page-container"><h1 id="firstHeading" class="firstHeading mw-first-heading"><span class="mw-page-title-main">Start up and Configuration/cs</span></h1><?xml encoding="UTF-8"><div class="mw-content-ltr mw-parser-output" lang="cs" dir="ltr"><div class="mw-pt-languages noprint navigation-not-searchable" lang="en" dir="ltr"><div class="mw-pt-languages-label">Other languages:</div><ul class="mw-pt-languages-list"><li><a href="../index.php?title=Special;Translate&amp;group=page-Start+up+and+Configuration&amp;language=&amp;task=view.html" class="new" title="Start translation for this language" lang="" dir="ltr"></a></li>
-<li><a href="../de/Start_up_and_Configuration.html" class="mw-pt-progress mw-pt-progress--high" title="Programmstart und Konfiguration (97% translated)" lang="de" dir="ltr">Deutsch</a></li>
+<li><a href="../de/Start_up_and_Configuration.html" class="mw-pt-progress mw-pt-progress--complete" title="Programmstart und Konfiguration (100% translated)" lang="de" dir="ltr">Deutsch</a></li>
 <li><a href="../Start_up_and_Configuration.html" class="mw-pt-languages-ui mw-pt-progress mw-pt-progress--complete" title="Start up and Configuration (100% translated)" lang="en" dir="ltr">English</a></li>
 <li><a href="../tr/Start_up_and_Configuration.html" class="mw-pt-progress mw-pt-progress--low" title="Start up and Configuration (1% translated)" lang="tr" dir="ltr">T&uuml;rk&ccedil;e</a></li>
 <li><a href="../es/Start_up_and_Configuration.html" class="mw-pt-progress mw-pt-progress--med" title="Puesta en marcha y Configuraci&oacute;n (23% translated)" lang="es" dir="ltr">espa&ntilde;ol</a></li>
-<li><a href="../fr/Start_up_and_Configuration.html" class="mw-pt-progress mw-pt-progress--high" title="D&eacute;marrage et configuration (97% translated)" lang="fr" dir="ltr">fran&ccedil;ais</a></li>
-<li><a href="../it/Start_up_and_Configuration.html" class="mw-pt-progress mw-pt-progress--high" title="Avvio e Configurazione (93% translated)" lang="it" dir="ltr">italiano</a></li>
-<li><a href="../pl/Start_up_and_Configuration.html" class="mw-pt-progress mw-pt-progress--high" title="Uruchomienie i konfiguracja (97% translated)" lang="pl" dir="ltr">polski</a></li>
+<li><a href="../fr/Start_up_and_Configuration.html" class="mw-pt-progress mw-pt-progress--complete" title="D&eacute;marrage et configuration (100% translated)" lang="fr" dir="ltr">fran&ccedil;ais</a></li>
+<li><a href="../it/Start_up_and_Configuration.html" class="mw-pt-progress mw-pt-progress--high" title="Avvio e Configurazione (97% translated)" lang="it" dir="ltr">italiano</a></li>
+<li><a href="../pl/Start_up_and_Configuration.html" class="mw-pt-progress mw-pt-progress--complete" title="Uruchomienie i konfiguracja (100% translated)" lang="pl" dir="ltr">polski</a></li>
 <li><a href="../pt-br/Start_up_and_Configuration.html" class="mw-pt-progress mw-pt-progress--low" title="Inicializa&ccedil;&atilde;o e configura&ccedil;&atilde;o (5% translated)" lang="pt-BR" dir="ltr">portugu&ecirc;s do Brasil</a></li>
 <li><a href="../ro/Start_up_and_Configuration.html" class="mw-pt-progress mw-pt-progress--med" title="Start up and Configuration (20% translated)" lang="ro" dir="ltr">rom&acirc;n&#259;</a></li>
 <li><a href="../sv/Start_up_and_Configuration.html" class="mw-pt-progress mw-pt-progress--med" title="Start up and Configuration (19% translated)" lang="sv" dir="ltr">svenska</a></li>
@@ -22,7 +22,7 @@
 </div>
 </div>
 <div lang="en" dir="ltr" class="mw-content-ltr">
-<div id="itsfree" style="text-align:center;color:black;background:#FDE0A8;margin:1em 7em;padding:0.5em 2em;border:2px solid #FF5706;">In FreeCAD version 0.20 the default location of the program's configuration, data and cache files was changed for Linux.<br>
+<div class="warning-box">In FreeCAD version 0.20 the default location of the program's configuration, data and cache files was changed for Linux.<br>
 See <a href="../Release_notes_0.20.html#Core" title="Release notes 0.20">Release notes 0.20</a> for more information. This page has not yet been updated accordingly.</div>
 </div>
 <div style="clear:right; margin-bottom: .5em; float: right; padding: .5em 0 .8em 1.4em; background: none;"><meta property="mw:PageProp/toc"></div>
@@ -121,7 +121,7 @@ See <a href="../Release_notes_0.20.html#Core" title="Release notes 0.20">Release
 <tr>
 <td><code>--get-config &lt;config-var-name&gt;</code></td>
 <td>most</td>
-<td>Outputs the requested value in a popup dialog. Exits upon confirmation with <span style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #888888; border-radius: 0.3em; padding: 0px 5px 1px 5px;">OK</span>. Cannot be used repeatedly. If an unknown/illegal variable name is used, the response is empty. The <code>--console</code> flag is not honored.
+<td>Outputs the requested value in a popup dialog. Exits upon confirmation with <span class="key" style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #888888; border-radius: 0.3em; padding: 0px 5px 1px 5px; color:#202122;">OK</span>. Cannot be used repeatedly. If an unknown/illegal variable name is used, the response is empty. The <code>--console</code> flag is not honored.
 </td></tr></tbody></table>
 <p>Options can written in two forms: <code>--long-option arg</code> and <code>--long-option=arg</code>.
 </p>
@@ -325,7 +325,7 @@ FreeCAD can be used in console mode using the <code>--console</code> switch (whi
 </p>
 </div>
 <div lang="en" dir="ltr" class="mw-content-ltr">
-<p>To quickly find the location of the configuration files (e.g. to delete them and therefore reset FreeCAD to "factory settings") on your machine, run the following command in the <a href="../Python_console.html" title="Python console">Python console</a> in FreeCAD:
+<p>To quickly find the location of the configuration files (e.g. to delete them and therefore reset FreeCAD to "factory settings") on your machine, run the following command in the <a href="../Python_console.html" class="mw-redirect" title="Python console">Python console</a> in FreeCAD:
 </p>
 </div>
 <div class="mw-highlight mw-highlight-lang-python mw-content-ltr" dir="ltr"><pre><span></span><span class="n">App</span><span class="o">.</span><span class="n">getUserConfigDir</span><span class="p">()</span>
@@ -579,7 +579,7 @@ FreeCAD can be used in console mode using the <code>--console</code> switch (whi
 </p>
 </div>
 <div lang="en" dir="ltr" class="mw-content-ltr">
-<p>Entries of the configuration set can be queried with the <b>config var name</b> (see tables above) from the <a href="../Python_console.html" title="Python console">Python console</a>. For example:
+<p>Entries of the configuration set can be queried with the <b>config var name</b> (see tables above) from the <a href="../Python_console.html" class="mw-redirect" title="Python console">Python console</a>. For example:
 </p>
 <pre> &gt;&gt;&gt; FreeCAD.ConfigGet("ExeVersion")
  '0.19'
@@ -687,10 +687,10 @@ FreeCAD can be used in console mode using the <code>--console</code> switch (whi
         <div class="NavContent mw-collapsible-content" style="margin: 10px; border: 1px solid var(--border-color-base, #aaaaaa); text-align: left; border-collapse: collapse; font-weight: normal; font-size: 100%; clear:both; margin-top: 1px; background-color: var(--background-color-neutral-subtle, #fefefe);">
 <ul><li><b><a href="../cs/Getting_started.html" title="Getting started/cs">Getting started</a></b></li>
 <li><b>Installation:</b> <a href="../cs/Download.html" title="Download/cs">Download</a>, <a href="../cs/Installing_on_Windows.html" title="Installing on Windows/cs">Windows</a>, <a href="../cs/Installing_on_Linux.html" title="Installing on Linux/cs">Linux</a>, <a href="../cs/Installing_on_Mac.html" title="Installing on Mac/cs">Mac</a>, <a href="../cs/Installing_additional_components.html" title="Installing additional components/cs">Additional components</a>, <a href="../index.php?title=Compile_on_Docker/cs&amp;action=edit&amp;redlink=1.html" class="new" title="Compile on Docker/cs (page does not exist)">Docker</a>, <a href="../index.php?title=AppImage/cs&amp;action=edit&amp;redlink=1.html" class="new" title="AppImage/cs (page does not exist)">AppImage</a>, <a href="../index.php?title=Ubuntu_Snap/cs&amp;action=edit&amp;redlink=1.html" class="new" title="Ubuntu Snap/cs (page does not exist)">Ubuntu Snap</a></li>
-<li><b>Basics:</b> <a href="../cs/About_FreeCAD.html" title="About FreeCAD/cs">About FreeCAD</a>, <a href="../index.php?title=Interface/cs&amp;action=edit&amp;redlink=1.html" class="new" title="Interface/cs (page does not exist)">Interface</a>, <a href="../cs/Mouse_navigation.html" title="Mouse navigation/cs">Mouse navigation</a>, <a href="../index.php?title=Selection_methods/cs&amp;action=edit&amp;redlink=1.html" class="new" title="Selection methods/cs (page does not exist)">Selection methods</a>, <a href="../index.php?title=Object_name/cs&amp;action=edit&amp;redlink=1.html" class="new" title="Object name/cs (page does not exist)">Object name</a>, <a href="../cs/Preferences_Editor.html" title="Preferences Editor/cs">Preferences</a>, <a href="../cs/Workbenches.html" title="Workbenches/cs">Workbenches</a>, <a href="../cs/Document_structure.html" title="Document structure/cs">Document structure</a>, <a href="../cs/Property.html" title="Property/cs">Properties</a>, <a href="../cs/Help_FreeCAD.html" title="Help FreeCAD/cs">Help FreeCAD</a>, <a href="../index.php?title=Donate/cs&amp;action=edit&amp;redlink=1.html" class="new" title="Donate/cs (page does not exist)">Donate</a></li></ul>
+<li><b>Basics:</b> <a href="../cs/About_FreeCAD.html" title="About FreeCAD/cs">About FreeCAD</a>, <a href="../index.php?title=Interface/cs&amp;action=edit&amp;redlink=1.html" class="new" title="Interface/cs (page does not exist)">Interface</a>, <a href="../cs/Mouse_navigation.html" title="Mouse navigation/cs">Mouse navigation</a>, <a href="../cs/Selection_methods.html" title="Selection methods/cs">Selection methods</a>, <a href="../index.php?title=Object_name/cs&amp;action=edit&amp;redlink=1.html" class="new" title="Object name/cs (page does not exist)">Object name</a>, <a href="../cs/Preferences_Editor.html" title="Preferences Editor/cs">Preferences</a>, <a href="../cs/Workbenches.html" title="Workbenches/cs">Workbenches</a>, <a href="../cs/Document_structure.html" title="Document structure/cs">Document structure</a>, <a href="../cs/Property.html" title="Property/cs">Properties</a>, <a href="../cs/Help_FreeCAD.html" title="Help FreeCAD/cs">Help FreeCAD</a>, <a href="../index.php?title=Donate/cs&amp;action=edit&amp;redlink=1.html" class="new" title="Donate/cs (page does not exist)">Donate</a></li></ul>
 <hr>
 <ul><li><b>Help:</b> <a href="../cs/Tutorials.html" title="Tutorials/cs">Tutorials</a>, <a href="../cs/Video_tutorials.html" title="Video tutorials/cs">Video tutorials</a></li>
-<li><b><a href="../cs/Workbenches.html" title="Workbenches/cs">Workbenches</a>:</b> <a href="../index.php?title=Std_Base/cs&amp;action=edit&amp;redlink=1.html" class="new" title="Std Base/cs (page does not exist)">Std Base</a>, <a href="../index.php?title=Assembly_Workbench/cs&amp;action=edit&amp;redlink=1.html" class="new" title="Assembly Workbench/cs (page does not exist)">Assembly</a>, <a href="../index.php?title=BIM_Workbench/cs&amp;action=edit&amp;redlink=1.html" class="new" title="BIM Workbench/cs (page does not exist)">BIM</a>, <a href="../cs/CAM_Workbench.html" title="CAM Workbench/cs">CAM</a>, <a href="../cs/Draft_Workbench.html" title="Draft Workbench/cs">Draft</a>, <a href="../cs/FEM_Workbench.html" title="FEM Workbench/cs">FEM</a>, <a href="../cs/Inspection_Workbench.html" title="Inspection Workbench/cs">Inspection</a>, <a href="../index.php?title=Material_Workbench/cs&amp;action=edit&amp;redlink=1.html" class="new" title="Material Workbench/cs (page does not exist)">Material</a>, <a href="../cs/Mesh_Workbench.html" title="Mesh Workbench/cs">Mesh</a>, <a href="../cs/OpenSCAD_Workbench.html" title="OpenSCAD Workbench/cs">OpenSCAD</a>, <a href="../cs/Part_Workbench.html" title="Part Workbench/cs">Part</a>, <a href="../cs/PartDesign_Workbench.html" title="PartDesign Workbench/cs">PartDesign</a>, <a href="../cs/Points_Workbench.html" title="Points Workbench/cs">Points</a>, <a href="../cs/Reverse_Engineering_Workbench.html" title="Reverse Engineering Workbench/cs">Reverse Engineering</a>, <a href="../cs/Robot_Workbench.html" title="Robot Workbench/cs">Robot</a>, <a href="../cs/Sketcher_Workbench.html" title="Sketcher Workbench/cs">Sketcher</a>, <a href="../cs/Spreadsheet_Workbench.html" title="Spreadsheet Workbench/cs">Spreadsheet</a>, <a href="../cs/Surface_Workbench.html" title="Surface Workbench/cs">Surface</a>, <a href="../cs/TechDraw_Workbench.html" title="TechDraw Workbench/cs">TechDraw</a>, <a href="../index.php?title=Testing/cs&amp;action=edit&amp;redlink=1.html" class="new" title="Testing/cs (page does not exist)">Test Framework</a></li></ul>
+<li><b><a href="../cs/Workbenches.html" title="Workbenches/cs">Workbenches</a>:</b> <a href="../cs/Std_Base.html" title="Std Base/cs">Std Base</a>, <a href="../index.php?title=Assembly_Workbench/cs&amp;action=edit&amp;redlink=1.html" class="new" title="Assembly Workbench/cs (page does not exist)">Assembly</a>, <a href="../index.php?title=BIM_Workbench/cs&amp;action=edit&amp;redlink=1.html" class="new" title="BIM Workbench/cs (page does not exist)">BIM</a>, <a href="../cs/CAM_Workbench.html" title="CAM Workbench/cs">CAM</a>, <a href="../cs/Draft_Workbench.html" title="Draft Workbench/cs">Draft</a>, <a href="../cs/FEM_Workbench.html" title="FEM Workbench/cs">FEM</a>, <a href="../cs/Inspection_Workbench.html" title="Inspection Workbench/cs">Inspection</a>, <a href="../cs/Material_Workbench.html" title="Material Workbench/cs">Material</a>, <a href="../cs/Mesh_Workbench.html" title="Mesh Workbench/cs">Mesh</a>, <a href="../cs/OpenSCAD_Workbench.html" title="OpenSCAD Workbench/cs">OpenSCAD</a>, <a href="../cs/Part_Workbench.html" title="Part Workbench/cs">Part</a>, <a href="../cs/PartDesign_Workbench.html" title="PartDesign Workbench/cs">PartDesign</a>, <a href="../cs/Points_Workbench.html" title="Points Workbench/cs">Points</a>, <a href="../cs/Reverse_Engineering_Workbench.html" title="Reverse Engineering Workbench/cs">Reverse Engineering</a>, <a href="../cs/Robot_Workbench.html" title="Robot Workbench/cs">Robot</a>, <a href="../cs/Sketcher_Workbench.html" title="Sketcher Workbench/cs">Sketcher</a>, <a href="../cs/Spreadsheet_Workbench.html" title="Spreadsheet Workbench/cs">Spreadsheet</a>, <a href="../cs/Surface_Workbench.html" title="Surface Workbench/cs">Surface</a>, <a href="../cs/TechDraw_Workbench.html" title="TechDraw Workbench/cs">TechDraw</a>, <a href="../index.php?title=Testing/cs&amp;action=edit&amp;redlink=1.html" class="new" title="Testing/cs (page does not exist)">Test Framework</a></li></ul>
 <hr>
 <ul><li><b><a href="../index.php?title=Addon/cs&amp;action=edit&amp;redlink=1.html" class="new" title="Addon/cs (page does not exist)">Addons</a>:</b> <a href="../index.php?title=Std_AddonMgr/cs&amp;action=edit&amp;redlink=1.html" class="new" title="Std AddonMgr/cs (page does not exist)">Addon Manager</a>, <a href="../index.php?title=External_workbenches/cs&amp;action=edit&amp;redlink=1.html" class="new" title="External workbenches/cs (page does not exist)">External workbenches</a>, <a href="../cs/Scripting_and_macros.html" title="Scripting and macros/cs">Scripting and macros</a></li></ul>
 <hr>
@@ -698,35 +698,35 @@ FreeCAD can be used in console mode using the <code>--console</code> switch (whi
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20250807081525
+Cached time: 20260111235612
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.112 seconds
-Real time usage: 0.120 seconds
+CPU time usage: 0.107 seconds
+Real time usage: 0.237 seconds
 Preprocessor visited node count: 866/1000000
-Post&#8208;expand include size: 14519/2097152 bytes
+Post&#8208;expand include size: 14437/2097152 bytes
 Template argument size: 4877/2097152 bytes
 Highest expansion depth: 5/100
 Expensive parser function count: 4/100
 Unstrip recursion depth: 0/20
-Unstrip post&#8208;expand size: 6501/5000000 bytes
+Unstrip post&#8208;expand size: 6516/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   22.048      1 -total
- 19.87%    4.381      1 Template:Userdocnavi/cs
- 17.72%    3.908      2 Template:Docnav
-  8.83%    1.947      4 Template:Code
-  8.02%    1.769      1 Template:Navigation_menu_2
-  7.83%    1.725     36 Template:Incode
-  7.59%    1.674     41 Template:FileName
-  5.43%    1.196      1 Template:VeryImportantMessage
-  3.83%    0.844      1 Template:Version
-  3.62%    0.799      1 Template:MenuCommand
+100.00%   44.407      1 -total
+ 22.71%   10.083      1 Template:Userdocnavi/cs
+ 13.04%    5.791      4 Template:Code
+ 11.59%    5.148      1 Template:Navigation_menu_2
+ 10.95%    4.863      1 Template:TOCright
+  8.37%    3.717     41 Template:FileName
+  6.18%    2.744     36 Template:Incode
+  5.89%    2.615      1 Template:VeryImportantMessage
+  5.46%    2.424      1 Template:Version
+  4.65%    2.066      2 Template:Docnav
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:66337-0!canonical and timestamp 20250807081525 and revision id 1624568. Rendering was triggered because: api-parse
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:66337-0!canonical and timestamp 20260111235612 and revision id 1624568. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
