--- a/wiki/cs/Scenegraph.html
+++ b/wiki/cs/Scenegraph.html
@@ -20,7 +20,9 @@
     <div><a href="../cs/Online_Help_Toc.html" title="Online Help Toc/cs">Index</a> <span class="mw-default-size" typeof="mw:File"><span><img src="../File/Online_Help_Toc.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="48" data-file-height="48"></span></span></div>
 </div>
 <div style="clear:right; margin-bottom: .5em; float: right; padding: .5em 0 .8em 1.4em; background: none;"><meta property="mw:PageProp/toc"></div>
-<h2><span class="mw-headline" id="Introduction">Introduction</span></h2>
+<p><span id="Introduction"></span>
+</p>
+<h2><span id=".C3.9Avod"></span><span class="mw-headline" id="&Uacute;vod">&Uacute;vod</span></h2>
 <p>The geometry that appears in the <a href="../3D_view.html" class="mw-redirect" title="3D view">3D views</a> of FreeCAD is rendered by the <a rel="nofollow" class="external text" href="https://en.wikipedia.org/wiki/Coin3D">Coin3D</a> library. Coin3D is an implementation of the <a rel="nofollow" class="external text" href="https://en.wikipedia.org/wiki/Open_Inventor">Open Inventor</a> standard. The <a rel="nofollow" class="external text" href="https://en.wikipedia.org/wiki/Open_Cascade_Technology">OpenCASCADE</a> software also provides the same functionality, but it was decided at the very early stages of FreeCAD not to use the built-in OpenCASCADE viewer, but rather switch to the more performant Coin3D software. A good way to learn about that library is the book <a rel="nofollow" class="external text" href="http://www-evasion.imag.fr/Membres/Francois.Faure/doc/inventorMentor/sgi_html/">Open Inventor Mentor</a>.
 </p>
 <h2><span class="mw-headline" id="Description">Description</span></h2>
@@ -100,13 +102,13 @@ Separator<span class="w"> </span><span class="o">{</span><span class="w"> </span
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260112000337
+Cached time: 20260112000342
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.060 seconds
-Real time usage: 0.095 seconds
-Preprocessor visited node count: 173/1000000
+CPU time usage: 0.062 seconds
+Real time usage: 0.120 seconds
+Preprocessor visited node count: 174/1000000
 Post&#8208;expand include size: 8454/2097152 bytes
 Template argument size: 2906/2097152 bytes
 Highest expansion depth: 5/100
@@ -116,18 +118,18 @@ Unstrip post&#8208;expand size: 5325/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   21.941      1 -total
- 37.44%    8.214      1 Template:Powerdocnavi/cs
- 14.39%    3.158      1 Template:Navigation_menu_2
- 13.95%    3.060      1 Template:Docnav/cs
- 13.58%    2.980      2 Template:Code
- 12.05%    2.643      1 Template:Top
-  7.98%    1.750      1 Template:Docnav
-  6.61%    1.450      1 Template:Caption
-  5.76%    1.263      1 Template:TOCright
+100.00%   34.472      1 -total
+ 39.27%   13.538      1 Template:Powerdocnavi/cs
+ 15.60%    5.379      1 Template:Top
+ 12.40%    4.273      1 Template:Navigation_menu_2
+ 12.17%    4.194      1 Template:Docnav
+ 11.10%    3.826      1 Template:Docnav/cs
+  7.97%    2.749      2 Template:Code
+  6.64%    2.290      1 Template:TOCright
+  5.24%    1.806      1 Template:Caption
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:32858-0!canonical and timestamp 20260112000337 and revision id 1207342. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:32858-0!canonical and timestamp 20260112000342 and revision id 1736791. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
