--- a/wiki/cs/PySide.html
+++ b/wiki/cs/PySide.html
@@ -1,12 +1,12 @@
 <link href="../site.css" rel="stylesheet" type="text/css"/><div class="mw-page-container"><h1 id="firstHeading" class="firstHeading mw-first-heading"><span class="mw-page-title-main">PySide/cs</span></h1><?xml encoding="UTF-8"><div class="mw-content-ltr mw-parser-output" lang="cs" dir="ltr"><div class="mw-pt-languages noprint navigation-not-searchable" lang="en" dir="ltr"><div class="mw-pt-languages-label">Other languages:</div><ul class="mw-pt-languages-list"><li><a href="../index.php?title=Special;Translate&amp;group=page-PySide&amp;language=&amp;task=view.html" class="new" title="Start translation for this language" lang="" dir="ltr"></a></li>
 <li><a href="../id/PySide.html" class="mw-pt-progress mw-pt-progress--low" title="PySide (4% translated)" lang="id" dir="ltr">Bahasa Indonesia</a></li>
-<li><a href="../de/PySide.html" class="mw-pt-progress mw-pt-progress--med" title="PySide (39% translated)" lang="de" dir="ltr">Deutsch</a></li>
+<li><a href="../de/PySide.html" class="mw-pt-progress mw-pt-progress--complete" title="PySide (100% translated)" lang="de" dir="ltr">Deutsch</a></li>
 <li><a href="../PySide.html" class="mw-pt-languages-ui mw-pt-progress mw-pt-progress--complete" title="PySide (100% translated)" lang="en" dir="ltr">English</a></li>
 <li><a href="../tr/PySide.html" class="mw-pt-progress mw-pt-progress--low" title="PySide (4% translated)" lang="tr" dir="ltr">T&uuml;rk&ccedil;e</a></li>
 <li><a href="../es/PySide.html" class="mw-pt-progress mw-pt-progress--low" title="PySide (4% translated)" lang="es" dir="ltr">espa&ntilde;ol</a></li>
-<li><a href="../fr/PySide.html" class="mw-pt-progress mw-pt-progress--med" title="PySide (39% translated)" lang="fr" dir="ltr">fran&ccedil;ais</a></li>
+<li><a href="../fr/PySide.html" class="mw-pt-progress mw-pt-progress--complete" title="PySide (100% translated)" lang="fr" dir="ltr">fran&ccedil;ais</a></li>
 <li><a href="../it/PySide.html" class="mw-pt-progress mw-pt-progress--med" title="PySide (39% translated)" lang="it" dir="ltr">italiano</a></li>
-<li><a href="../pl/PySide.html" class="mw-pt-progress mw-pt-progress--med" title="PySide (39% translated)" lang="pl" dir="ltr">polski</a></li>
+<li><a href="../pl/PySide.html" class="mw-pt-progress mw-pt-progress--complete" title="PySide (100% translated)" lang="pl" dir="ltr">polski</a></li>
 <li><a href="../pt/PySide.html" class="mw-pt-progress mw-pt-progress--low" title="PySide (4% translated)" lang="pt" dir="ltr">portugu&ecirc;s</a></li>
 <li><a href="../pt-br/PySide.html" class="mw-pt-progress mw-pt-progress--low" title="PySide (7% translated)" lang="pt-BR" dir="ltr">portugu&ecirc;s do Brasil</a></li>
 <li><a href="../ro/PySide.html" class="mw-pt-progress mw-pt-progress--low" title="PySide (4% translated)" lang="ro" dir="ltr">rom&acirc;n&#259;</a></li>
@@ -21,7 +21,9 @@
     <div><a href="../cs/Online_Help_Toc.html" title="Online Help Toc/cs">Index</a> <span class="mw-default-size" typeof="mw:File"><span><img src="../File/Online_Help_Toc.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="48" data-file-height="48"></span></span></div>
 </div>
 <div style="clear:right; margin-bottom: .5em; float: right; padding: .5em 0 .8em 1.4em; background: none;"><meta property="mw:PageProp/toc"></div>
-<h2><span class="mw-headline" id="Introduction">Introduction</span></h2>
+<p><span id="Introduction"></span>
+</p>
+<h2><span id=".C3.9Avod"></span><span class="mw-headline" id="&Uacute;vod">&Uacute;vod</span></h2>
 <p>The <a href="../PySide.html" title="PySide">PySide</a> library is a Python wrapper for the cross-platform graphical user interface (GUI) toolkit Qt. FreeCAD uses Qt as it&rsquo;s main gui-toolkit. Qt itself is more than just a gui-toolkit, it is a collection of C++ libraries for many different purposes, one can for example do networking with Qt library components, all of it accessible in Python through PySide. Every graphical interface that can be created in C++, can also be created and modified in Python. An advantage of using Python is that Qt interfaces can be developed and tested live, as we don't need to compile the source files.
 </p><p>The recommended way to import PySide (of any version) in FreeCAD is:
 </p>
@@ -118,34 +120,34 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20251109200019
+Cached time: 20260112000425
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.105 seconds
-Real time usage: 0.124 seconds
-Preprocessor visited node count: 291/1000000
+CPU time usage: 0.077 seconds
+Real time usage: 0.114 seconds
+Preprocessor visited node count: 292/1000000
 Post&#8208;expand include size: 8986/2097152 bytes
 Template argument size: 2920/2097152 bytes
 Highest expansion depth: 5/100
 Expensive parser function count: 5/100
 Unstrip recursion depth: 0/20
-Unstrip post&#8208;expand size: 5433/5000000 bytes
+Unstrip post&#8208;expand size: 5451/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   23.977      1 -total
- 45.36%   10.876      1 Template:Powerdocnavi/cs
- 15.28%    3.664      5 Template:Code
- 13.14%    3.150      2 Template:Docnav
-  9.39%    2.252      1 Template:Navigation_menu_2
-  5.26%    1.262      5 Template:Top
-  5.11%    1.225      9 Template:Incode
-  5.00%    1.198      1 Template:Caption
-  4.12%    0.988      1 Template:TOCright
+100.00%   23.091      1 -total
+ 32.52%    7.510      1 Template:Powerdocnavi/cs
+ 13.18%    3.044      5 Template:Code
+ 12.59%    2.906      2 Template:Docnav
+ 11.12%    2.567      1 Template:Navigation_menu_2
+ 10.79%    2.491      5 Template:Top
+  8.74%    2.018      9 Template:Incode
+  7.98%    1.843      1 Template:Caption
+  7.80%    1.800      1 Template:TOCright
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:32607-0!canonical and timestamp 20251109200019 and revision id 1685304. Rendering was triggered because: api-parse
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:32607-0!canonical and timestamp 20260112000425 and revision id 1736795. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
